src/styles/board/board.module.scss
.board {
  position:fixed;
  height: 100vh;
  width: 300px;
  right: 0;
  top: 0;
  padding: 1rem;
  background-color: $black-color;
  transition: 0.5s;
  overflow-y:scroll;

  -ms-overflow-style: none;
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }

  &-collapsed {
    right: -300px;
  }

  .head {
    display: flex;
    justify-content: right;
    align-items: center;
    gap: 1rem;

    background-color: transparent;
    .icon-button{
      background-color: inherit;
      @include button-effect;

      .icon {
        color: $white-color;
        width: 2rem;
        height: 2rem;
      }
    }
  }

  .body {
    margin-top: 1rem;
    border-radius: 1rem;
    background-color: $white-color;
    padding: 1rem;
  }
}

@media screen and (min-width: 1024px) {
  .board {
    padding: 0 1rem;
    position:static;
    width: 50%;
    height: auto;

    .head {
      .icon-x {
        display: none;
      }
    }

    .body {
      margin-top: 1rem;
    }
  }
}

